--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -140,7 +140,7 @@
                                     </div>
                                     <div class="col-lg-2">
                                         <button class="btn btn-sm btn-success">
-                                            <span class="glyphicon glyphicon-plus"></span>   加关注
+                                            <span class="glyphicon glyphicon-plus"></span>   加好友
                                         </button>
                                     </div>
                                 </div>
@@ -175,7 +175,7 @@
                                     </div>
                                     <div class="col-lg-2 col-sm-12">
                                         <button class="btn btn-sm btn-success">
-                                            <span class="glyphicon glyphicon-plus"></span>   加关注
+                                            <span class="glyphicon glyphicon-plus"></span>   加好友
                                         </button>
                                     </div>
                                 </div>
