--- a/project-funding.html
+++ b/project-funding.html
@@ -44,10 +44,10 @@
             <div class="row mtb15">
                 <div class="btn-group btn-group-justified">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">订单信息填写页</button>
+                        <button type="button" class="btn btn-success text-overflow active nocursor">订单信息填写页</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success active nocursor">订单信息确认页</button>
+                        <button type="button" class="btn btn-default  disabled">订单信息确认页</button>
                     </div>
                     <div class="btn-group">
                         <button type="button" class="btn btn-default disabled">支付</button>
@@ -66,7 +66,8 @@
                     <div class="panel-body ren-funding">
                         <dl class="dl-horizontal">
                             <dt>支持金额：</dt>
-                            <dd class="has-error">￥<label class="control-label">1,230.00</label>元</dd>
+                            <!--<dd class="has-error">￥<label class="control-label">1,230.00</label>元</dd>-->
+                            <dd class="has-error">￥<label class="control-label">35.00</label>元</dd>
                             <dt>配送运费：</dt>
                             <dd class="fz12">免运费</dd>
                             <dt>回报内容：</dt>
@@ -111,10 +112,54 @@
                                     </address>
                                 </dd>
                                 <dd class="fz12">
-                                    <p class="">
-                                        <input name="addrList" id="addrList_22700855" type="radio" selected="" value="22700855" >&nbsp;<label class="fz12" for="addrList_22700855">吴三桂&nbsp;&nbsp;xxxx街xxx号xxxx2栋2单元4号&nbsp;13980650000</label>&nbsp;&nbsp;&nbsp;<a class="f_blue" href="javascript:editaddr('22700855','吴三桂','xxxxx号xxx2栋2单元4号','','1398065000','',22,1930,50947,3891);">编辑</a>&nbsp;&nbsp;&nbsp;<a class="f_blue write_del" href="javascript:removeaddr('22700855');">删除</a>
-                                    </p>
+                                    
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <input name="addrList" id="addrList_1" type="radio" selected="" value="1">&nbsp;<label class="fz12" for="addrList_1">吴三桂&nbsp;&nbsp;xxxx街xxx号xxxx2栋2单元4号&nbsp;13980650000</label>&nbsp;&nbsp;&nbsp;<a class="f_blue" href="javascript:editaddr('22700855','吴三桂','xxxxx号xxx2栋2单元4号','','1398065000','',22,1930,50947,3891);">编辑</a>&nbsp;&nbsp;&nbsp;<a class="f_blue write_del" href="javascript:removeaddr('22700855');">删除</a>
+                                        </li>
+                                        <li>
+                                            <input name="addrList" id="addrList_2" type="radio" selected="" value="2">&nbsp;<label class="fz12" for="addrList_2">吴三桂&nbsp;&nbsp;xxxx街xxx号xxxx2栋2单元4号&nbsp;13980650000</label>&nbsp;&nbsp;&nbsp;<a class="f_blue" href="javascript:editaddr('22700855','吴三桂','xxxxx号xxx2栋2单元4号','','1398065000','',22,1930,50947,3891);">编辑</a>&nbsp;&nbsp;&nbsp;<a class="f_blue write_del" href="javascript:removeaddr('22700855');">删除</a>
+                                        </li>
+                                    </ul>
 
+                                    <hr />
+                                    <div class="bor_t_li">
+                                        <p class="bg_yellow840">
+                                            <input name="addrList" id="newAddress" type="radio" onclick="newAddress();" value="0"> <label for="newAddress">使用新地址</label>
+                                        </p>
+                                        <div id="modifyaddDiv" style="display: block;">
+                                            <input id="addressId" name="addressId" type="hidden" value="57656628">
+                                            <input id="addressOpt" name="addressOpt" type="hidden" value="modify">
+                                            <div class="new_add pt10">
+                                                <dl>
+                                                    <dt><span class="f_red">*</span> 收货人：</dt>
+                                                    <dd><input name="name" id="name" maxlength="50" type="text" class="inp145"></dd>
+                                                </dl>
+                                                <dl>
+                                                    <dt><span class="f_red">*</span>所在地区：</dt>
+                                                    <dd>
+                                                        <select name="consignee_province" id="consignee_province" onchange="loadcitys();" class="sel75"><option value="0">请选择</option><option value="1">北京</option><option value="2">上海</option><option value="3">天津</option><option value="4">重庆</option><option value="5">河北</option><option value="6">山西</option><option value="7">河南</option><option value="8">辽宁</option><option value="9">吉林</option><option value="10">黑龙江</option><option value="11">内蒙古</option><option value="12">江苏</option><option value="13">山东</option><option value="14">安徽</option><option value="15">浙江</option><option value="16">福建</option><option value="17">湖北</option><option value="18">湖南</option><option value="19">广东</option><option value="20">广西</option><option value="21">江西</option><option value="22">四川</option><option value="23">海南</option><option value="24">贵州</option><option value="25">云南</option><option value="26">西藏</option><option value="27">陕西</option><option value="28">甘肃</option><option value="29">青海</option><option value="30">宁夏</option><option value="31">新疆</option><option value="32">台湾</option><option value="42">香港</option><option value="43">澳门</option><option value="84">钓鱼岛</option></select>
+                                                        <select name="consignee_city" id="consignee_city" onchange="loadCountys();" class="sel75"><option value="0">请选择</option><option value="1930">成都市</option><option value="1946">自贡市</option><option value="1950">攀枝花市</option><option value="1954">泸州市</option><option value="1960">绵阳市</option><option value="1962">德阳市</option><option value="1977">广元市</option><option value="1983">遂宁市</option><option value="1988">内江市</option><option value="1993">乐山市</option><option value="2005">宜宾市</option><option value="2016">广安市</option><option value="2022">南充市</option><option value="2033">达州市</option><option value="2042">巴中市</option><option value="2047">雅安市</option><option value="2058">眉山市</option><option value="2065">资阳市</option><option value="2070">阿坝州</option><option value="2084">甘孜州</option><option value="2103">凉山州</option></select>
+                                                        <select name="consignee_countyid" id="consignee_countyid" onchange="loadTowns()" class="sel75"><option value="0">请选择</option><option value="50947">武侯区</option><option value="50946">金牛区</option><option value="50944">青羊区</option><option value="50948">成华区</option><option value="50949">高新区</option><option value="50945">锦江区</option><option value="49322">郫县</option><option value="49324">双流县</option><option value="4284">高新西区</option><option value="49316">龙泉驿区</option><option value="49314">新都区</option><option value="49315">温江区</option><option value="49321">都江堰市</option><option value="49318">彭州市</option><option value="49317">青白江区</option><option value="49319">崇州市</option><option value="49327">金堂县</option><option value="49323">新津县</option><option value="49320">邛崃市</option><option value="49325">大邑县</option><option value="49326">蒲江县</option></select>
+                                                         
+                                                    </dd>
+                                                </dl>
+                                                <dl>
+                                                    <dt><span class="f_red">*</span> 详细地址：</dt>
+                                                    <dd><span id="area_div"></span><input maxlength="500" style="width:356px;" name="consignee_address" id="consignee_address" type="text" class="inp315"></dd>
+                                                </dl>
+                                                <dl>
+                                                    <dt><span class="f_red">*</span> 手机号码：</dt>
+                                                    <dd><input name="mobile" id="mobile" type="text" maxlength="13" class="inp145">&nbsp;或&nbsp;&nbsp;&nbsp;<span class="f_333">固定号码：</span><input name="phone" id="phone" type="text" maxlength="20" class="inp145"></dd>
+                                                </dl>
+                                                <dl>
+                                                    <dt>邮箱：</dt>
+                                                    <dd><input name="email" id="email" type="text" class="inp145"></dd>
+                                                </dl>
+                                            </div>
+                                        </div>
+                                        <p class="mt10"><button class="btn btn-danger btn-sm plr30" onclick="saveAddress();">保存收货人地址</button></p>
+                                    </div>
 
                                 </dd>
                             </dl>
@@ -133,7 +178,7 @@
                         </div>
                     </div>
                     <div class="panel-footer text-center">
-                        <button class="btn btn-danger plr30">下一步</button>
+                        <button class="btn btn-danger plr30" onclick="location.href='/project-funding-2.html'">下一步</button>
                     </div>
                 </div>
             </div>
