--- a/project-funding.html
+++ b/project-funding.html
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                     <div class="panel-footer text-center">
-                        <button class="btn btn-danger plr30" onclick="location.href='/project-funding-2.html'">下一步</button>
+                        <button class="btn btn-danger plr30" onclick="location.href='project-funding-2.html'">下一步</button>
                     </div>
                 </div>
             </div>
