--- a/project-funding.html
+++ b/project-funding.html
@@ -92,7 +92,7 @@
                                         <div class="col-sm-4 mp0">
                                             <input type="text" maxlength="200" class="form-control input-sm fz12" id="inputEmail3" placeholder="" value="个人">
                                         </div>
-                                        <label for="inputEmail3" class="col-sm-2 fz12 control-label">* 发票抬头：</label>
+                                        <label for="inputEmail3" class="col-sm-2 fz12 control-label">* 发票抬头</label>
                                     </div>
                                 </div>
                             </dd>
