<button class="btn btn-xs btn-info mb5" ><span class="glyphicon glyphicon-heart"></span> 关注</button>                                         <button class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus"></span> 加入</button>

--- a/admin/school-list.html
+++ b/admin/school-list.html
@@ -146,7 +146,9 @@
                                     </div>
                                     <div class="col-lg-2">
                                         <!--<i class="glyphicon glyphicon-star-empty ren-icon-add-group-list cursor" title="加入到我的列表"></i>-->
-                                        <button class="btn btn-xs btn-success">申请加入</button>
+                                        <button class="btn btn-xs btn-info mb5" ><span class="glyphicon glyphicon-heart"></span> 关注</button>
+                                        <button class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus"></span> 加入</button> 
+                                       
                                     </div>
                                 </div>
                             </div>
